ch 5 updates and proof-read.  Gone to Mike.

--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -29,6 +29,8 @@ ALMA - Atacama Large Millimetre Array
 
 API - Application Program Interface
 
+CCD - Charge--Coupled Device
+
 CCSN(e) - Core-Collapse Supernova(e)
 
 CDE - Continuous Distribution of Ellipsoids
@@ -56,6 +58,8 @@ MC - Monte Carlo
 MCMC - Markov Chain Monte Carlo
 
 MIR - Mid Infra-Red 
+
+MMT - Multiple Mirror Telescope
 
 MRN - The \citet*{Mathis1977} grain distribution
 
