--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,46 @@
+@ARTICLE{Zhang2004,
+   author = {{Zhang}, T. and {Wang}, X. and {Zhou}, X. and {Li}, W. and {Ma}, J. and 
+	{Jiang}, Z. and {Li}, Z.},
+    title = "{Optical Photometry of SN 1993J: 1995 to 2003}",
+  journal = {\aj},
+   eprint = {astro-ph/0406582},
+ keywords = {supernova: individual (SN 1993J), Techniques: Photometric},
+     year = 2004,
+    month = oct,
+   volume = 128,
+    pages = {1857-1867},
+      doi = {10.1086/423699},
+   adsurl = {http://adsabs.harvard.edu/abs/2004AJ....128.1857Z},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Maund2004,
+   author = {{Maund}, J.~R. and {Smartt}, S.~J. and {Kudritzki}, R.~P. and 
+	{Podsiadlowski}, P. and {Gilmore}, G.~F.},
+    title = "{The massive binary companion star to the progenitor of supernova 1993J}",
+  journal = {\nat},
+   eprint = {astro-ph/0401090},
+     year = 2004,
+    month = jan,
+   volume = 427,
+    pages = {129-131},
+   adsurl = {http://adsabs.harvard.edu/abs/2004Natur.427..129M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{Fox2014,
+  author={Ori D. Fox and K. Azalee Bostroem and Schuyler D. Van Dyk and Alexei V. Filippenko and Claes Fransson and Thomas
+Matheson and S. Bradley Cenko and Poonam Chandra and Vikram Dwarkadas and Weidong Li and Alex H. Parker and Nathan Smith},
+  title={Uncovering the Putative B-star Binary Companion of the SN 1993J Progenitor},
+  journal={The Astrophysical Journal},
+  volume={790},
+  number={1},
+  pages={17},
+  url={http://stacks.iop.org/0004-637X/790/i=1/a=17},
+  year={2014}
+}
+
 @article{Tran1997,
   author = {Hien D. Tran and Alexei V. Filippenko and Gary D. Schmidt and Karen S. Bjorkman and Buell T. Jannuzi and Paul S. Smith},
  journal = {Publications of the Astronomical Society of the Pacific},
