--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -10,7 +10,7 @@
 %% One sided
 \documentclass[11pt, a4paper, oneside, openright, fleqn]{thesis}
 %% Two sided
-%\documentclass[11pt, a4paper, twoside, openright, fleqn]{thesis}
+%\documentclass[11pt, a4papter, twoside, openright, fleqn]{thesis}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Package loading stuff
@@ -19,7 +19,7 @@
 % Load in srcltx package for xdvi link
 %\usepackage{srcltx}
 % NEEDS TO BE REMOVED BEFORE PRINTING!!!!
-\usepackage[inactive]{srcltx}
+%\usepackage[inactive]{srcltx}
 
 \usepackage[dvipsnames]{color}
 
