conclusions and abstract and some updates

--- a/thesis/back/appendices/appendA.tex
+++ b/thesis/back/appendices/appendA.tex
@@ -60,7 +60,7 @@ It transpires that the easiest wave to solve the vector wave equations is to def
 \mathbf{N}=\frac{\nabla \times \mathbf{M}}{k}
 \end{equation}
 
-\noindent $\mathbf{N}$ also has zero divergence and satisfies the vectore wave equation ($\nabla^2\mathbf{N}+k^2\mathbf{N}=0$).  We also have $\nabla \times \mathbf{N} = k\mathbf{M}$ ensuring that $\mathbf{M}$ and $\mathbf{N}$ have all of the required properties of an electromagnetic field (i.e. they satisfy Equations \ref{eqn:max1} and \ref{eqn:max2}).  If we can now find solutions to the scalar wave equation ({Equation \ref{eqn:swe}) then we have solutions to the vector wave equation (Equation \ref{eqn:vwe}) via Equations \ref{eqn:Mdef} and \ref{eqn:Ndef}.    Since we are interested in scattering by a sphere, we work in spherical polar coordinates and set $\mathbf{c}=\mathbf{r}$, where $\mathbf{r}$ is the radius vector.
+\noindent $\mathbf{N}$ also has zero divergence and satisfies the vector wave equation ($\nabla^2\mathbf{N}+k^2\mathbf{N}=0$).  We also have $\nabla \times \mathbf{N} = k\mathbf{M}$ ensuring that $\mathbf{M}$ and $\mathbf{N}$ have all of the required properties of an electromagnetic field (i.e. they satisfy Equations \ref{eqn:max1} and \ref{eqn:max2}).  If we can now find solutions to the scalar wave equation ({Equation \ref{eqn:swe}) then we have solutions to the vector wave equation (Equation \ref{eqn:vwe}) via Equations \ref{eqn:Mdef} and \ref{eqn:Ndef}.    Since we are interested in scattering by a sphere, we work in spherical polar coordinates and set $\mathbf{c}=\mathbf{r}$, where $\mathbf{r}$ is the radius vector.
 
 The scalar wave equation may be expanded in spherical polar coordinates as
 \begin{equation}
@@ -117,7 +117,7 @@ The corresponding magnetic field may be calculated via the curl of Equation \ref
 \mathbf{H}_i = \frac{-k}{\omega\mu}E_0 \sum _{n=1} ^{\infty} i^n \frac{2n+1}{n(n+1)}(\mathbf{M}_{e1n}^{(1)} - \mathbf{N}_{o1n}^{(1)})
 \end{equation}
 
-\noindent Finally, all that remains is to determine the scattered electromagnetic field $(\mathbf{E}_s,\mathbf{H}_s)$.  This may done by imposing the boundary condition that the tangential component of the fields must be continuous across the boundary of the two materials, i.e.
+\noindent Finally, all that remains is to determine the scattered electromagnetic field $(\mathbf{E}_s,\mathbf{H}_s)$.  This may be done by imposing the boundary condition that the tangential component of the fields must be continuous across the boundary of the two materials, i.e.
 \begin{equation}
 (\mathbf{E}_i+\mathbf{E}_s-\mathbf{E}_1)\times \mathbf{\hat{e}}_r=(\mathbf{H}_i+\mathbf{H}_s-\mathbf{H}_1)\times \mathbf{\hat{e}}_r=0
 \end{equation}
