--- a/thesis/front/acknowledgements.tex
+++ b/thesis/front/acknowledgements.tex
@@ -8,14 +8,16 @@
 \end{raggedleft}
 
 
-\noindent{There are so many people that I want to thank for their help and support. You all, I hope, know who you are. But the last three years have been eventful.  Anyone reading this will probably understand what it means when I say that the writing of this thesis has been among the lesser challenges that I have faced during my PhD.  And so, there are just a few, very heartfelt and uncharacteristically emotional thanks that I wish to make.}
+\noindent{There are so many people that I want to thank for their help and support. You all, I hope, know who you are. But the last three years have been eventful.  Anyone reading this will probably understand what it means when I say that the writing of this thesis has been among the lesser challenges that I have faced during my PhD.  And so, there are just a few, very heartfelt and uncharacteristically emotional, thanks that I wish to make.}
 
 \bigskip
 
-\noindent First and foremost, to Mike;  you have been endlessly patient and have always been generous with your time and advice.  You granted me the freedom and space to find my own path through my PhD and I am exceptionally grateful for this.  You have gone above and beyond, especially in difficult times, and I truly thank you.
-To Jeremy; your support over the last three years has been invaluable. You have always understood me and have guided me carefully and consciously and without preconceptions.    Your encouragement always came at the right times.  
-To Patrick; simply put, this thesis would not exist without you!  Thank you for everything; for advice on science and on life, for gossipy drinks and endless cups of tea, for giggling from the start to the end, for your patient understanding and for tea gin. 
-
+\noindent First and foremost, to Mike;  you have been endlessly patient and have always been generous with your time and advice.  You have given me the freedom and space to find my own path through my PhD and I am exceptionally grateful for this.  
+%You have gone above and beyond, especially in difficult times, and I truly thank you.
+To Jeremy; your support over the last three years has been invaluable. You have guided me thoughtfully and  your encouragement always seemed to come at the right times.  
+To Patrick; %simply put, this thesis would not exist without you!  
+thank you for everything -- %for advice on science and on life, for gossipy drinks and endless cups of tea, for giggling from the start to the end, for your patient understanding and for tea gin. 
+from science advice to gossip to tea gin, this thesis probably wouldn't exist without you.
 \bigskip 
 
 \noindent To 
@@ -25,20 +27,23 @@ Fiona,
 Georgia,
 George,
 Jack,
-and 
-Mike;  my luck in counting you as my friends is beyond words.  I know that every one of you would be there if I needed you, and you have all proved this on numerous occasions over the last three years.  My life is so much the better for having the conversation, laughter and wisdom that you all bring to it.  
+Megan,
+Mike
+and
+Victoria;  my luck in counting you as my friends is beyond words.  I know that every one of you would be there if I needed you, and you have all proved this on numerous occasions over the last three years.  My life is so much the better for having the conversation, laughter and wisdom that you all bring to it.  
 
-\clearpage
+%\clearpage
+\bigskip
+\noindent To Alex;  over the last three years I have watched you mature to become one of the best men I know.  I could not be prouder to call you my brother.  Knowing that you are always there for me means more to me than you know. 
 
-\noindent To Alex;  over the last three years I have watched you become a man, and one of the best.  I could not be prouder to call you my brother.  Knowing that you are always there for me, regardless of circumstance, means more to me than I can say. 
-
-%\bigskip
+\bigskip
 %
-%\noindent To Nick;  you are my rock. You have been there for me in my darkest moments and my best.  I cannot imagine having done this without you, and I have so many memories that I will cherish for the rest of my life.  You got me through this, as you get me through so much of my life.  You brighten every day and I am ever grateful.
+\noindent To Nick; you have been there for me in my darkest moments and my best.  I cannot imagine having done this without you, and I have so many memories that I will cherish for the rest of my life.  You got me through this %, as you get me through so much of my life.  
+and you brightened every day. I am so grateful.
 
 \bigskip
 
-\noindent To Mum and Dad;  you have been, are, and will always be my best friends in the world.  Support does not even begin to cover what you have given me, not just over the last three years but my whole life.  You are both caring, generous and wise, and I am so lucky to be able to call you Mum and Dad.  I love you.   
+\noindent To Mum and Dad;  you have been, are, and will always be my best friends in the world.  Support does not even begin to cover what you have given me, not just over the last three years but my whole life.  You are both caring, generous and wise, and I am so lucky to be able to call you Mum and Dad.  Thank you.   
 
 
 
