--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,196 @@
+@ARTICLE{Chevalier1986,
+   author = {{Chevalier}, R.~A.},
+    title = "{The scattered light echo of a supernova}",
+  journal = {\apj},
+ keywords = {Echoes, Light Scattering, Radiative Transfer, Stellar Envelopes, Supernovae, Albedo, Monte Carlo Method, Polarized Light},
+     year = 1986,
+    month = sep,
+   volume = 308,
+    pages = {225-231},
+      doi = {10.1086/164492},
+   adsurl = {http://adsabs.harvard.edu/abs/1986ApJ...308..225C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{CrabPulsar,
+  title = {Crab Nebula Pulsar NPO527},
+  author = {Reifenstein, Edward C. and Brundage, William D. and Staelin, David H.},
+  journal = {Phys. Rev. Lett.},
+  volume = {22},
+  issue = {7},
+  pages = {311--311},
+  numpages = {0},
+  year = {1969},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.22.311},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.22.311}
+}
+
+
+@ARTICLE{Bouchet1993,
+   author = {{Bouchet}, P. and {Danziger}, I.~J.},
+    title = "{Infrared Photometry and Spectrophotometry of Supernova 1987A - Part Two - 1987NOV to 1991MAR Observations}",
+  journal = {\aap},
+     year = 1993,
+    month = jun,
+   volume = 273,
+    pages = {451},
+   adsurl = {http://adsabs.harvard.edu/abs/1993A%26A...273..451B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Fransson1986,
+   author = {{Fransson}, C.},
+    title = "{Models for the early and late spectra of supernovae}",
+  journal = {Highlights of Astronomy},
+ keywords = {Early Stars, Gas Ionization, Late Stars, Stellar Envelopes, Stellar Models, Supernovae, Absorption Spectra, Line Spectra, Radiation Effects, Stellar Evolution, Temperature Effects, Ultraviolet Spectra},
+     year = 1986,
+   volume = 7,
+    pages = {611-623},
+   adsurl = {http://adsabs.harvard.edu/abs/1986HiA.....7..611F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Bianchi2007,
+   author = {{Bianchi}, S. and {Schneider}, R.},
+    title = "{Dust formation and survival in supernova ejecta}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0704.0586},
+ keywords = {shock waves, supernovae: individual: Cassiopeia A, dust, extinction, supernova remnants},
+     year = 2007,
+    month = jul,
+   volume = 378,
+    pages = {973-982},
+      doi = {10.1111/j.1365-2966.2007.11829.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2007MNRAS.378..973B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{Kotake2006,
+  author={Kei Kotake and Katsuhiko Sato and Keitaro Takahashi},
+  title={Explosion mechanism, neutrino burst and gravitational wave in core-collapse supernovae},
+  journal={Reports on Progress in Physics},
+  volume={69},
+  number={4},
+  pages={971},
+  url={http://stacks.iop.org/0034-4885/69/i=4/a=R03},
+  year={2006}
+}
+	
+
+@ARTICLE{Botticella2012,
+   author = {{Botticella}, M.~T. and {Smartt}, S.~J. and {Kennicutt}, R.~C. and 
+	{Cappellaro}, E. and {Sereno}, M. and {Lee}, J.~C.},
+    title = "{A comparison between star formation rate diagnostics and rate of core collapse supernovae within 11 Mpc}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1111.1692},
+ keywords = {stars: massive, supernovae: general, galaxies: star formation},
+     year = 2012,
+    month = jan,
+   volume = 537,
+      eid = {A132},
+    pages = {A132},
+      doi = {10.1051/0004-6361/201117343},
+   adsurl = {http://adsabs.harvard.edu/abs/2012A%26A...537A.132B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@INPROCEEDINGS{Turatto2003,
+   author = {{Turatto}, M.},
+    title = "{Classification of Supernovae}",
+booktitle = {Supernovae and Gamma-Ray Bursters},
+     year = 2003,
+   series = {Lecture Notes in Physics, Berlin Springer Verlag},
+   volume = 598,
+   eprint = {astro-ph/0301107},
+   editor = {{Weiler}, K.},
+    pages = {21-36},
+   adsurl = {http://adsabs.harvard.edu/abs/2003LNP...598...21T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Iben1983,
+   author = {{Iben}, Jr., I. and {Renzini}, A.},
+    title = "{Asymptotic giant branch evolution and beyond}",
+  journal = {\araa},
+ keywords = {Asymptotic Giant Branch Stars, Giant Stars, Stellar Evolution, Stellar Mass Ejection, Supernovae, White Dwarf Stars, Abundance, Pulsed Radiation, Star Clusters, Stellar Spectrophotometry, Thermal Radiation},
+     year = 1983,
+   volume = 21,
+    pages = {271-342},
+      doi = {10.1146/annurev.aa.21.090183.001415},
+   adsurl = {http://adsabs.harvard.edu/abs/1983ARA%26A..21..271I},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Wood2001,
+   author = {{Wood}, K. and {Smith}, D. and {Whitney}, B. and {Stassun}, K. and 
+	{Kenyon}, S.~J. and {Wolff}, M.~J. and {Bjorkman}, K.~S.},
+    title = "{Scattered Light Models of Protostellar Envelopes: Multiple Outflow Cavities and Misaligned Circumstellar Disks}",
+  journal = {\apj},
+   eprint = {astro-ph/0107060},
+ keywords = {Stars: Circumstellar Matter, ISM: Dust, Extinction, ISM: Jets and Outflows, Radiative Transfer, Stars: Formation, stars: individual (T Tauri, IRAS 04016+2610)},
+     year = 2001,
+    month = nov,
+   volume = 561,
+    pages = {299-307},
+      doi = {10.1086/323060},
+   adsurl = {http://adsabs.harvard.edu/abs/2001ApJ...561..299W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Crotts1989,
+   author = {{Crotts}, A.~P.~S. and {Kunkel}, W.~E. and {McCarthy}, P.~J.
+	},
+    title = "{Light echoes and transient luminescence near SN 1987A}",
+  journal = {\apjl},
+ keywords = {Luminescence, Optical Reflection, Stellar Envelopes, Stellar Winds, Supernova 1987a, Continuous Spectra, Forbidden Transitions, H Alpha Line, Oxygen Spectra},
+     year = 1989,
+    month = dec,
+   volume = 347,
+    pages = {L61-L64},
+      doi = {10.1086/185608},
+   adsurl = {http://adsabs.harvard.edu/abs/1989ApJ...347L..61C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Jaffe2004,
+   author = {{Jaffe}, W. and {Meisenheimer}, K. and {R{\"o}ttgering}, H.~J.~A. and 
+	{Leinert}, C. and {Richichi}, A. and {Chesneau}, O. and {Fraix-Burnet}, D. and 
+	{Glazenborg-Kluttig}, A. and {Granato}, G.-L. and {Graser}, U. and 
+	{Heijligers}, B. and {K{\"o}hler}, R. and {Malbet}, F. and {Miley}, G.~K. and 
+	{Paresce}, F. and {Pel}, J.-W. and {Perrin}, G. and {Przygodda}, F. and 
+	{Schoeller}, M. and {Sol}, H. and {Waters}, L.~B.~F.~M. and 
+	{Weigelt}, G. and {Woillez}, J. and {de Zeeuw}, P.~T.},
+    title = "{The central dusty torus in the active nucleus of NGC 1068}",
+  journal = {\nat},
+     year = 2004,
+    month = may,
+   volume = 429,
+    pages = {47-49},
+      doi = {10.1038/nature02531},
+   adsurl = {http://adsabs.harvard.edu/abs/2004Natur.429...47J},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@BOOK{Draine2011,
+   author = {{Draine}, B.~T.},
+    title = "{Physics of the Interstellar and Intergalactic Medium}",
+booktitle = {Physics of the Interstellar and Intergalactic Medium by Bruce T.~Draine.~Princeton University Press, 2011.~ISBN: 978-0-691-12214-4},
+     year = 2011,
+   adsurl = {http://adsabs.harvard.edu/abs/2011piim.book.....D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Zhang2004,
    author = {{Zhang}, T. and {Wang}, X. and {Zhou}, X. and {Li}, W. and {Ma}, J. and 
 	{Jiang}, Z. and {Li}, Z.},
@@ -3226,7 +3419,7 @@ year = {2005}
 }
 @article{Matsuura2011,
 abstract = {We report far-infrared and submillimeter observations of supernova 1987A, the star whose explosion was observed on 23 February 1987 in the Large Magellanic Cloud, a galaxy located 160,000 light years away. The observations reveal the presence of a population of cold dust grains radiating with a temperature of about 17 to 23 kelvin at a rate of about 220 times the luminosity of the Sun. The intensity and spectral energy distribution of the emission suggest a dust mass of about 0.4 to 0.7 times the mass of the Sun. The radiation must originate from the supernova ejecta and requires the efficient precipitation of all refractory material into dust. Our observations imply that supernovae can produce the large dust masses detected in young galaxies at very high redshifts.},
-author = {Matsuura, M and Dwek, E and Meixner, M and Otsuka, M and Babler, B and Barlow, M J and Roman-Duval, J and Engelbracht, C and Sandstrom, K and Laki\'{c}evi\'{c}, M and van Loon, J Th and Sonneborn, G and Clayton, G C and Long, K S and Lundqvist, P and Nozawa, T and Gordon, K D and Hony, S and Panuzzo, P and Okumura, K and Misselt, K a and Montiel, E and Sauvage, M},
+author = {Matsuura, M and f, E and Meixner, M and Otsuka, M and Babler, B and Barlow, M J and Roman-Duval, J and Engelbracht, C and Sandstrom, K and Laki\'{c}evi\'{c}, M and van Loon, J Th and Sonneborn, G and Clayton, G C and Long, K S and Lundqvist, P and Nozawa, T and Gordon, K D and Hony, S and Panuzzo, P and Okumura, K and Misselt, K a and Montiel, E and Sauvage, M},
 doi = {10.1126/science.1205983},
 file = {:Users/antoniabevan/Documents/Mendeley Desktop/Matsuura et al/Science/Matsuura et al. - 2011 - Herschel detects a massive dust reservoir in supernova 1987A.pdf:pdf},
 issn = {1095-9203},
