ch 1 revised version

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,229 @@
+@ARTICLE{Draine2001,
+   author = {{Draine}, B.~T. and {Li}, A.},
+    title = "{Infrared Emission from Interstellar Dust. I. Stochastic Heating of Small Grains}",
+  journal = {\apj},
+   eprint = {astro-ph/0011318},
+ keywords = {ISM: Dust, Extinction- Galaxies: ISM, Infrared: ISM: Continuum},
+     year = 2001,
+    month = apr,
+   volume = 551,
+    pages = {807-824},
+      doi = {10.1086/320227},
+   adsurl = {http://adsabs.harvard.edu/abs/2001ApJ...551..807D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Hobbs2009,
+   author = {{Hobbs}, L.~M. and {York}, D.~G. and {Thorburn}, J.~A. and {Snow}, T.~P. and 
+	{Bishof}, M. and {Friedman}, S.~D. and {McCall}, B.~J. and {Oka}, T. and 
+	{Rachford}, B. and {Sonnentrucker}, P. and {Welty}, D.~E.},
+    title = "{Studies of the Diffuse Interstellar Bands. III. HD 183143}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0910.2983},
+ primaryClass = "astro-ph.GA",
+ keywords = {ISM: lines and bands, ISM: molecules, stars: individual: HD 183143},
+     year = 2009,
+    month = nov,
+   volume = 705,
+    pages = {32-45},
+      doi = {10.1088/0004-637X/705/1/32},
+   adsurl = {http://adsabs.harvard.edu/abs/2009ApJ...705...32H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Hobbs2008,
+   author = {{Hobbs}, L.~M. and {York}, D.~G. and {Snow}, T.~P. and {Oka}, T. and 
+	{Thorburn}, J.~A. and {Bishof}, M. and {Friedman}, S.~D. and 
+	{McCall}, B.~J. and {Rachford}, B. and {Sonnentrucker}, P. and 
+	{Welty}, D.~E.},
+    title = "{A Catalog of Diffuse Interstellar Bands in the Spectrum of HD 204827}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0804.2094},
+ keywords = {Stars: Binaries: Spectroscopic, ISM: Lines and Bands, ISM: Molecules, Stars: Individual: Henry Draper Number: HD 204827},
+     year = 2008,
+    month = jun,
+   volume = 680,
+    pages = {1256-1270},
+      doi = {10.1086/587930},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...680.1256H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Heger1922,
+   author = {{Heger}, M.~L.},
+    title = "{Further study of the sodium lines in class B stars }",
+  journal = {Lick Observatory Bulletin},
+ keywords = {B STARS: SPECTRA, SODIUM},
+     year = 1922,
+   volume = 10,
+    pages = {141-145},
+      doi = {10.5479/ADS/bib/1922LicOB.10.141H},
+   adsurl = {http://adsabs.harvard.edu/abs/1922LicOB..10..141H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@INPROCEEDINGS{Ehrenfreund2000,
+   author = {{Ehrenfreund}, P. and {Schutte}, W.~A.},
+    title = "{Infrared Observations of Interstellar Ices}",
+booktitle = {From Molecular Clouds to Planetary},
+     year = 2000,
+   series = {IAU Symposium},
+   volume = 197,
+   editor = {{Minh}, Y.~C. and {van Dishoeck}, E.~F.},
+    pages = {135},
+   adsurl = {http://adsabs.harvard.edu/abs/2000IAUS..197..135E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@INPROCEEDINGS{Schutte1997,
+   author = {{Schutte}, W.~A.},
+    title = "{Formation and evolution of interstellar icy grain mantles}",
+booktitle = {NATO Advanced Science Institutes (ASI) Series C},
+     year = 1997,
+   series = {NATO Advanced Science Institutes (ASI) Series C},
+   volume = 487,
+   editor = {{Greenberg}, J.~M.},
+    pages = {1},
+   adsurl = {http://adsabs.harvard.edu/abs/1997ASIC..487....1S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Pendleton2002,
+   author = {{Pendleton}, Y.~J. and {Allamandola}, L.~J.},
+    title = "{The Organic Refractory Material in the Diffuse Interstellar Medium: Mid-Infrared Spectroscopic Constraints}",
+  journal = {\apjs},
+ keywords = {Infrared: ISM: Lines and Bands, ISM: Molecules, Molecular Data},
+     year = 2002,
+    month = jan,
+   volume = 138,
+    pages = {75-98},
+      doi = {10.1086/322999},
+   adsurl = {http://adsabs.harvard.edu/abs/2002ApJS..138...75P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Li2001,
+   author = {{Li}, A. and {Draine}, B.~T.},
+    title = "{Infrared Emission from Interstellar Dust. II. The Diffuse Interstellar Medium}",
+  journal = {\apj},
+   eprint = {astro-ph/0011319},
+ keywords = {ISM: Dust, Extinction, Infrared: ISM: Continuum, Infrared: ISM: Lines and Bands, ISM: Abundances, Radiation Mechanisms: Thermal, Ultraviolet: ISM},
+     year = 2001,
+    month = jun,
+   volume = 554,
+    pages = {778-802},
+      doi = {10.1086/323147},
+   adsurl = {http://adsabs.harvard.edu/abs/2001ApJ...554..778L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Joblin1992,
+   author = {{Joblin}, C. and {Leger}, A. and {Martin}, P.},
+    title = "{Contribution of polycyclic aromatic hydrocarbon molecules to the interstellar extinction curve}",
+  journal = {\apjl},
+ keywords = {Aromatic Compounds, Cyclic Hydrocarbons, Infrared Spectra, Interstellar Extinction, Spectral Signatures, Absorption Cross Sections, Active Galaxies, Far Ultraviolet Radiation, Planetary Nebulae, Reflection Nebulae, Visible Spectrum},
+     year = 1992,
+    month = jul,
+   volume = 393,
+    pages = {L79-L82},
+      doi = {10.1086/186456},
+   adsurl = {http://adsabs.harvard.edu/abs/1992ApJ...393L..79J},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Stecher1965a,
+   author = {{Stecher}, T.~P. and {Donn}, B.},
+    title = "{On Graphite and Interstellar Extinction}",
+  journal = {\apj},
+     year = 1965,
+    month = nov,
+   volume = 142,
+    pages = {1681},
+      doi = {10.1086/148461},
+   adsurl = {http://adsabs.harvard.edu/abs/1965ApJ...142.1681S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Witt1986,
+   author = {{Witt}, A.~N. and {Bohlin}, R.~C. and {Stecher}, T.~P.},
+    title = "{Detection of scattering in the 2175 A interstellar band}",
+  journal = {\apjl},
+ keywords = {Astronomical Spectroscopy, Interstellar Extinction, Interstellar Matter, Reflection Nebulae, Ultraviolet Astronomy, Cosmic Dust, Electromagnetic Scattering, Far Ultraviolet Radiation, Iue, Spectral Bands, Spectrophotometry},
+     year = 1986,
+    month = jun,
+   volume = 305,
+    pages = {L23-L27},
+      doi = {10.1086/184677},
+   adsurl = {http://adsabs.harvard.edu/abs/1986ApJ...305L..23W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Witt1982,
+   author = {{Witt}, A.~N. and {Walker}, G.~A.~H. and {Bohlin}, R.~C. and 
+	{Stecher}, T.~P.},
+    title = "{The scattering phase function of interstellar grains - The case of the reflection nebula NGC 7023}",
+  journal = {\apj},
+ keywords = {Cosmic Dust, Interstellar Matter, Interstellar Radiation, Nebulae, Scattering Functions, Ultraviolet Astronomy, Brightness Distribution, Iue, Luminosity},
+     year = 1982,
+    month = oct,
+   volume = 261,
+    pages = {492-509},
+      doi = {10.1086/160360},
+   adsurl = {http://adsabs.harvard.edu/abs/1982ApJ...261..492W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Lillie1976,
+   author = {{Lillie}, C.~F. and {Witt}, A.~N.},
+    title = "{Ultraviolet photometry from the orbiting astronomical observatory. XXV - Diffuse galactic light in the 1500-4200 A region and the scattering properties of interstellar dust grains}",
+  journal = {\apj},
+ keywords = {Cosmic Dust, Light Scattering, Oao 2, Sky Brightness, Ultraviolet Photometry, Albedo, Astronomical Models, Diffuse Radiation, Galactic Radiation, Interstellar Extinction, Night Sky, Radiative Transfer},
+     year = 1976,
+    month = aug,
+   volume = 208,
+    pages = {64-74},
+      doi = {10.1086/154582},
+   adsurl = {http://adsabs.harvard.edu/abs/1976ApJ...208...64L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Stecher1965,
+   author = {{Stecher}, T.~P.},
+    title = "{Interstellar Ectinction in the Ultraviolet.}",
+  journal = {\apj},
+     year = 1965,
+    month = nov,
+   volume = 142,
+    pages = {1683},
+      doi = {10.1086/148462},
+   adsurl = {http://adsabs.harvard.edu/abs/1965ApJ...142.1683S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{McCarthy1980,
+   author = {{McCarthy}, J.~F. and {Forrest}, W.~J. and {Briotta}, Jr., D.~A. and 
+	{Houck}, J.~R.},
+    title = "{The galactic center - 16-30 micron observations and the 18 micron extinction}",
+  journal = {\apj},
+ keywords = {Astronomical Spectroscopy, Galactic Nuclei, Infrared Astronomy, Infrared Spectra, Interstellar Extinction, Milky Way Galaxy, Cosmic Dust, Density Distribution, Galactic Structure, Interstellar Matter, Molecular Clouds, Silicates, Spatial Distribution},
+     year = 1980,
+    month = dec,
+   volume = 242,
+    pages = {965-975},
+      doi = {10.1086/158528},
+   adsurl = {http://adsabs.harvard.edu/abs/1980ApJ...242..965M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Chevalier1986,
    author = {{Chevalier}, R.~A.},
     title = "{The scattered light echo of a supernova}",
