--- a/thesis/front/acknowledgements.tex
+++ b/thesis/front/acknowledgements.tex
@@ -8,42 +8,48 @@
 \end{raggedleft}
 
 
-\noindent{There are so many people that I want to thank for their help and support. You all, I hope, know who you are. But the last three years have been eventful.  Anyone reading this will probably understand what it means when I say that the writing of this thesis has been among the lesser challenges that I have faced during my PhD.  And so, there are just a few, very heartfelt and uncharacteristically emotional, thanks that I wish to make.}
-
-\bigskip
-
-\noindent First and foremost, to Mike;  you have been endlessly patient and have always been generous with your time and advice.  You have given me the freedom and space to find my own path through my PhD and I am exceptionally grateful for this.  
+\noindent{There are so many people that I want to thank -- you all, I hope, know who you are. But the last three years have been eventful and the writing of this thesis has been one of the lesser challenges.  
+%Anyone reading this will probably understand what it means when I say that the writing of this thesis has been among the lesser challenges that I have faced during my PhD.  
+And so, there are just a few, very heartfelt and uncharacteristically emotional, thanks that I wish to make.}
+%\bigskip
+%\noindent 
+First and foremost, to Mike;  you have been endlessly patient and have always been generous with your time and advice.  You gave me the freedom and space to find my own path through my PhD, particularly in difficult times, and I am exceptionally grateful for this.  
 %You have gone above and beyond, especially in difficult times, and I truly thank you.
-To Jeremy; your support over the last three years has been invaluable. You have guided me thoughtfully and  your encouragement always seemed to come at the right times.  
+To Jeremy; %your support over the last three years has been invaluable. ]
+you advised me thoughtfully and carefully. Thanks for always having those encouraging words at the right moments.
+%  your encouragement always seemed to come at the right times.  
 To Patrick; %simply put, this thesis would not exist without you!  
 thank you for everything -- %for advice on science and on life, for gossipy drinks and endless cups of tea, for giggling from the start to the end, for your patient understanding and for tea gin. 
-from science advice to gossip to tea gin, this thesis probably wouldn't exist without you.
-\bigskip 
-
-\noindent To 
+from science advice to gossip to tea gin, this thesis probably wouldn't exist without you!
+%\bigskip 
+%\noindent 
+To 
 Benedict,
 Dom,
 Fiona,
 Georgia,
 George,
 Jack,
-Megan,
-Mike
 and
-Victoria;  my luck in counting you as my friends is beyond words.  I know that every one of you would be there if I needed you, and you have all proved this on numerous occasions over the last three years.  My life is so much the better for having the conversation, laughter and wisdom that you all bring to it.  
-
+Mike;  my luck in counting you as my friends is beyond words. %I know that every one of you would be there if I needed you, and 
+Thank you all for being there on so many occasions, happy and sad.
+% proved this on numerous occasions over the last three years.  
+My life is so much the better for having the conversation, laughter and wisdom that you all bring to it.  
 %\clearpage
-\bigskip
-\noindent To Alex;  over the last three years I have watched you mature to become one of the best men I know.  I could not be prouder to call you my brother.  Knowing that you are always there for me means more to me than you know. 
-
-\bigskip
+%\bigskip
+%\noindent 
+To Alex;  you really did a good job growing up these last few years.  I could not be prouder to call you my brother.  Knowing that you are always there for me means more to me than you know. 
+%\bigskip
 %
-\noindent To Nick; you have been there for me in my darkest moments and my best.  I cannot imagine having done this without you, and I have so many memories that I will cherish for the rest of my life.  You got me through this %, as you get me through so much of my life.  
+%\noindent 
+To Nick; you have been there for me in my darkest moments and my best.  
+I cannot imagine having done this without you, and I have so many memories that I will cherish for the rest of my life.  
+You got me through this 
+%, as you get me through so much of my life.  
 and you brightened every day. I am so grateful.
-
-\bigskip
-
-\noindent To Mum and Dad;  you have been, are, and will always be my best friends in the world.  Support does not even begin to cover what you have given me, not just over the last three years but my whole life.  You are both caring, generous and wise, and I am so lucky to be able to call you Mum and Dad.  Thank you.   
+%\bigskip
+%\noindent 
+To Mum and Dad;  you have been, are, and will always be my best friends in the world.  Support does not even begin to cover what you have given me, not just over the last three years but my whole life.  You are both caring, generous and wise, and I am so lucky to be able to call you Mum and Dad.  Thank you.   
 
 
 
