updates to structure of ch 5

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,15 @@
+@ARTICLE{Brown1992,
+   author = {{Brown}, G.~E. and {Bruenn}, S.~W. and {Wheeler}, J.~C.},
+    title = "{Is There a Black-Hole in Supernova 1987A}",
+  journal = {Comments on Astrophysics},
+     year = 1992,
+   volume = 16,
+    pages = {153},
+   adsurl = {http://adsabs.harvard.edu/abs/1992ComAp..16..153B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Draine2001,
    author = {{Draine}, B.~T. and {Li}, A.},
     title = "{Infrared Emission from Interstellar Dust. I. Stochastic Heating of Small Grains}",
