corrections to abstract, intro and concs

--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -47,7 +47,7 @@ HST - Hubble Space Telescope
 
 HWZI - Half-Width Zero Intensity
 
-IR - Infra-Red
+IR - Infrared
 
 ISM - Inter-Stellar Medium
 
@@ -55,9 +55,7 @@ LMC - Large Magellanic Cloud
 
 MC - Monte Carlo
 
-MCMC - Markov Chain Monte Carlo
-
-MIR - Mid Infra-Red 
+MCMC - Markov Chain Monte Carlo 
 
 MMT - Multiple Mirror Telescope
 
