--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,58 @@
+@ARTICLE{Sibthorpe2010,
+   author = {{Sibthorpe}, B. and {Ade}, P.~A.~R. and {Bock}, J.~J. and {Chapin}, E.~L. and 
+	{Devlin}, M.~J. and {Dicker}, S. and {Griffin}, M. and {Gundersen}, J.~O. and 
+	{Halpern}, M. and {Hargrave}, P.~C. and {Hughes}, D.~H. and 
+	{Jeong}, W.-S. and {Kaneda}, H. and {Klein}, J. and {Koo}, B.-C. and 
+	{Lee}, H.-G. and {Marsden}, G. and {Martin}, P.~G. and {Mauskopf}, P. and 
+	{Moon}, D.-S. and {Netterfield}, C.~B. and {Olmi}, L. and {Pascale}, E. and 
+	{Patanchon}, G. and {Rex}, M. and {Roy}, A. and {Scott}, D. and 
+	{Semisch}, C. and {Truch}, M.~D.~P. and {Tucker}, C. and {Tucker}, G.~S. and 
+	{Viero}, M.~P. and {Wiebe}, D.~V.},
+    title = "{AKARI and BLAST Observations of the Cassiopeia A Supernova Remnant and Surrounding Interstellar Medium}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0910.1094},
+ primaryClass = "astro-ph.HE",
+ keywords = {early universe, ISM: supernova remnants},
+     year = 2010,
+    month = aug,
+   volume = 719,
+    pages = {1553-1564},
+      doi = {10.1088/0004-637X/719/2/1553},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...719.1553S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Barlow1978,
+   author = {{Barlow}, M.~J.},
+    title = "{The destruction and growth of dust grains in interstellar space. I - Destruction by sputtering.}",
+  journal = {\mnras},
+ keywords = {Cosmic Dust, Ice, Silicate And Graphite Dust, Interstellar Radiation, Interstellar Space, Particle Interactions, Sputtering,Interstellar Matter},
+     year = 1978,
+    month = may,
+   volume = 183,
+    pages = {367-395},
+   adsurl = {http://adsabs.harvard.edu/abs/1978MNRAS.183..367B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Smartt2009,
+   author = {{Smartt}, S.~J.},
+    title = "{Progenitors of Core-Collapse Supernovae}",
+  journal = {\araa},
+archivePrefix = "arXiv",
+   eprint = {0908.0700},
+ primaryClass = "astro-ph.SR",
+     year = 2009,
+    month = sep,
+   volume = 47,
+    pages = {63-106},
+      doi = {10.1146/annurev-astro-082708-101737},
+   adsurl = {http://adsabs.harvard.edu/abs/2009ARA%26A..47...63S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Brown1992,
    author = {{Brown}, G.~E. and {Bruenn}, S.~W. and {Wheeler}, J.~C.},
     title = "{Is There a Black-Hole in Supernova 1987A}",
