some corrections to ch 5

--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -21,7 +21,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-AAT - Anglo-Australian Telescope
+AAT - Anglo--Australian Telescope
 
 AGB - Asymptotic Giant Branch
 
@@ -31,21 +31,21 @@ API - Application Program Interface
 
 CCD - Charge--Coupled Device
 
-CCSN(e) - Core-Collapse Supernova(e)
+CCSN(e) - Core--Collapse Supernova(e)
 
 CDE - Continuous Distribution of Ellipsoids
 
-CTIO - Cerro Tololo Inter-American Observatory
+CTIO - Cerro Tololo Inter--American Observatory
 
 ER - Equatorial Ring
 
 ESO - European Southern Observatory
 
-FWHM - Full-Width Half Maximum
+FWHM - Full--Width Half Maximum
 
 HST - Hubble Space Telescope
 
-HWZI - Half-Width Zero Intensity
+HWZI - Half--Width Zero Intensity
 
 IR - Infrared
 
@@ -57,6 +57,8 @@ MC - Monte Carlo
 
 MCMC - Markov Chain Monte Carlo 
 
+MDM - Michigan--Dartmouth--Massachusetts Institute of Technology
+
 MMT - Multiple Mirror Telescope
 
 MRN - The \citet*{Mathis1977} grain distribution
@@ -65,11 +67,11 @@ MSE - Mean Squared Error
 
 NASA - National Aeronautics and Space Administration
 
-NIR - Near Infra-Red
+NIR - Near Infra--Red
 
 QSO - Quasi-Stellar Object (Quasar)
 
-SCUBA - Sub-millimetre Common-User Bolometer Array
+SCUBA - Sub-millimetre Common--User Bolometer Array
 
 SED - Spectral Energy Distribution
 
